--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 procfs = "0.14.0"
-nix = "0.23.0"
+nix = { version = "0.29", features = ["aio", "process", "signal"] }
 sysinfo = "0.32.0"
