--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 procfs = "0.14.0"
-nix = { version = "0.29", features = ["aio", "process", "signal"] }
+nix = { version = "0.29", features = ["aio", "process", "signal", "resource"] }
 sysinfo = "0.32.0"
+which = "7.0.0"
