--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 procfs = "0.14.0"
-nix = { version = "0.29", features = ["aio", "process", "signal", "resource"] }
+nix = { version = "0.29", features = ["aio", "process", "signal", "resource", "user"] }
 sysinfo = "0.32.0"
 which = "7.0.0"
 scheduler = "0.1.3"
