--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-procfs = "0.17.0"
-sysinfo = "0.32.0"
+procfs = "0.14.0"
+sysinfo = "0.27.4"
 libc = "0.2.164"
 nix = "0.29.0"
 ratatui = "0.29.0"
@@ -14,3 +14,5 @@ crossterm = "0.28.1"
 user = "0.1.1"
 color-eyre = "0.6"
 strum = "0.26"
+users = "0.11.0"
+tokio = {version = "1.41.1", features = ["full"] }
