--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 procfs = "0.14.0"
 sysinfo = "0.27.4"
 libc = "0.2.164"
-nix = "0.29.0"
+nix = { version = "0.29", features = ["aio", "process", "signal", "resource", "user"] }
 ratatui = "0.29.0"
 time = "0.3.36"
 crossterm = "0.28.1"
