--- a/ProcMaster/package.json
+++ b/ProcMaster/package.json
@@ -13,7 +13,8 @@
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-shell": "^2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.13.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.1.0",
