--- a/ProcMaster/src-tauri/Cargo.toml
+++ b/ProcMaster/src-tauri/Cargo.toml
@@ -23,4 +23,5 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 actix-web = "4"
+sysinfo = "0.27.4"
 
